tests/templates/NlbFargateService.template.json
{
  "Resources": {
    "NlbFargateServiceErrorTopic02D5A50B": {
      "Type": "AWS::SNS::Topic",
      "Properties": {
        "DisplayName": "NlbFargateServiceErrorTopic"
      }
    },
    "EcsFargateServiceVpcC2D7D9BA": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbFargateService/EcsFargateService/Vpc"
          }
        ]
      }
    },
    "EcsFargateServiceVpcPublicSubnet1Subnet703B05D0": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "EcsFargateServiceVpcC2D7D9BA"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.0.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NlbFargateService/EcsFargateService/Vpc/PublicSubnet1"
          }
        ]
      }
    },
    "EcsFargateServiceVpcPublicSubnet1RouteTable5B2B1C8F": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "EcsFargateServiceVpcC2D7D9BA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbFargateService/EcsFargateService/Vpc/PublicSubnet1"
          }
        ]
      }
    },
    "EcsFargateServiceVpcPublicSubnet1RouteTableAssociationBAB69940": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "EcsFargateServiceVpcPublicSubnet1RouteTable5B2B1C8F"
        },
        "SubnetId": {
          "Ref": "EcsFargateServiceVpcPublicSubnet1Subnet703B05D0"
        }
      }
    },
    "EcsFargateServiceVpcPublicSubnet1DefaultRoute1443157E": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "EcsFargateServiceVpcPublicSubnet1RouteTable5B2B1C8F"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "EcsFargateServiceVpcIGWD3686D0F"
        }
      },
      "DependsOn": ["EcsFargateServiceVpcVPCGW7E2DF507"]
    },
    "EcsFargateServiceVpcPublicSubnet1EIP8D959E5F": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbFargateService/EcsFargateService/Vpc/PublicSubnet1"
          }
        ]
      }
    },
    "EcsFargateServiceVpcPublicSubnet1NATGateway6C853D7F": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "EcsFargateServiceVpcPublicSubnet1Subnet703B05D0"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "EcsFargateServiceVpcPublicSubnet1EIP8D959E5F",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbFargateService/EcsFargateService/Vpc/PublicSubnet1"
          }
        ]
      }
    },
    "EcsFargateServiceVpcPublicSubnet2SubnetCD020827": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "EcsFargateServiceVpcC2D7D9BA"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.64.0/18",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NlbFargateService/EcsFargateService/Vpc/PublicSubnet2"
          }
        ]
      }
    },
    "EcsFargateServiceVpcPublicSubnet2RouteTableF9537475": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "EcsFargateServiceVpcC2D7D9BA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbFargateService/EcsFargateService/Vpc/PublicSubnet2"
          }
        ]
      }
    },
    "EcsFargateServiceVpcPublicSubnet2RouteTableAssociationB58E346A": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "EcsFargateServiceVpcPublicSubnet2RouteTableF9537475"
        },
        "SubnetId": {
          "Ref": "EcsFargateServiceVpcPublicSubnet2SubnetCD020827"
        }
      }
    },
    "EcsFargateServiceVpcPublicSubnet2DefaultRoute51F52FCE": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "EcsFargateServiceVpcPublicSubnet2RouteTableF9537475"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "EcsFargateServiceVpcIGWD3686D0F"
        }
      },
      "DependsOn": ["EcsFargateServiceVpcVPCGW7E2DF507"]
    },
    "EcsFargateServiceVpcPublicSubnet2EIPB7649BAC": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbFargateService/EcsFargateService/Vpc/PublicSubnet2"
          }
        ]
      }
    },
    "EcsFargateServiceVpcPublicSubnet2NATGateway5FF95634": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "EcsFargateServiceVpcPublicSubnet2SubnetCD020827"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "EcsFargateServiceVpcPublicSubnet2EIPB7649BAC",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbFargateService/EcsFargateService/Vpc/PublicSubnet2"
          }
        ]
      }
    },
    "EcsFargateServiceVpcPrivateSubnet1SubnetD4FDACD3": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "EcsFargateServiceVpcC2D7D9BA"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.128.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "NlbFargateService/EcsFargateService/Vpc/PrivateSubnet1"
          }
        ]
      }
    },
    "EcsFargateServiceVpcPrivateSubnet1RouteTableFEEDFBB2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "EcsFargateServiceVpcC2D7D9BA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbFargateService/EcsFargateService/Vpc/PrivateSubnet1"
          }
        ]
      }
    },
    "EcsFargateServiceVpcPrivateSubnet1RouteTableAssociationE67BC4E4": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "EcsFargateServiceVpcPrivateSubnet1RouteTableFEEDFBB2"
        },
        "SubnetId": {
          "Ref": "EcsFargateServiceVpcPrivateSubnet1SubnetD4FDACD3"
        }
      }
    },
    "EcsFargateServiceVpcPrivateSubnet1DefaultRoute13D3433F": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "EcsFargateServiceVpcPrivateSubnet1RouteTableFEEDFBB2"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "EcsFargateServiceVpcPublicSubnet1NATGateway6C853D7F"
        }
      }
    },
    "EcsFargateServiceVpcPrivateSubnet2SubnetE9425F69": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "EcsFargateServiceVpcC2D7D9BA"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "CidrBlock": "10.0.192.0/18",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "NlbFargateService/EcsFargateService/Vpc/PrivateSubnet2"
          }
        ]
      }
    },
    "EcsFargateServiceVpcPrivateSubnet2RouteTable6AE39F8D": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "EcsFargateServiceVpcC2D7D9BA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbFargateService/EcsFargateService/Vpc/PrivateSubnet2"
          }
        ]
      }
    },
    "EcsFargateServiceVpcPrivateSubnet2RouteTableAssociationB7E946C8": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "EcsFargateServiceVpcPrivateSubnet2RouteTable6AE39F8D"
        },
        "SubnetId": {
          "Ref": "EcsFargateServiceVpcPrivateSubnet2SubnetE9425F69"
        }
      }
    },
    "EcsFargateServiceVpcPrivateSubnet2DefaultRouteB2418B7D": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "EcsFargateServiceVpcPrivateSubnet2RouteTable6AE39F8D"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "EcsFargateServiceVpcPublicSubnet2NATGateway5FF95634"
        }
      }
    },
    "EcsFargateServiceVpcIGWD3686D0F": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NlbFargateService/EcsFargateService/Vpc"
          }
        ]
      }
    },
    "EcsFargateServiceVpcVPCGW7E2DF507": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "EcsFargateServiceVpcC2D7D9BA"
        },
        "InternetGatewayId": {
          "Ref": "EcsFargateServiceVpcIGWD3686D0F"
        }
      }
    },
    "EcsFargateServiceEcsClusterF9C6531B": {
      "Type": "AWS::ECS::Cluster"
    },
    "EcsFargateServiceLBB6A07CF1": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "false"
          }
        ],
        "Scheme": "internet-facing",
        "Subnets": [
          {
            "Ref": "EcsFargateServiceVpcPublicSubnet1Subnet703B05D0"
          },
          {
            "Ref": "EcsFargateServiceVpcPublicSubnet2SubnetCD020827"
          }
        ],
        "Type": "network"
      },
      "DependsOn": [
        "EcsFargateServiceVpcPublicSubnet1DefaultRoute1443157E",
        "EcsFargateServiceVpcPublicSubnet2DefaultRoute51F52FCE"
      ]
    },
    "EcsFargateServiceLBPublicListener81C77449": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "EcsFargateServiceLBPublicListenerECSGroup4611BEFE"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "EcsFargateServiceLBB6A07CF1"
        },
        "Port": 80,
        "Protocol": "TCP"
      }
    },
    "EcsFargateServiceLBPublicListenerECSGroup4611BEFE": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Port": 80,
        "Protocol": "TCP",
        "TargetType": "ip",
        "VpcId": {
          "Ref": "EcsFargateServiceVpcC2D7D9BA"
        }
      }
    },
    "EcsFargateServiceTaskDefTaskRole396DB007": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "EcsFargateServiceTaskDef36236676": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Essential": true,
            "Image": "amazon/amazon-ecs-sample",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "EcsFargateServiceTaskDefwebLogGroup93678A4C"
                },
                "awslogs-stream-prefix": "EcsFargateService",
                "awslogs-region": {
                  "Ref": "AWS::Region"
                }
              }
            },
            "Name": "web",
            "PortMappings": [
              {
                "ContainerPort": 80,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "EcsFargateServiceTaskDefExecutionRole8F510A00",
            "Arn"
          ]
        },
        "Family": "NlbFargateServiceEcsFargateServiceTaskDef30359611",
        "Memory": "512",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": ["FARGATE"],
        "TaskRoleArn": {
          "Fn::GetAtt": ["EcsFargateServiceTaskDefTaskRole396DB007", "Arn"]
        }
      }
    },
    "EcsFargateServiceTaskDefwebLogGroup93678A4C": {
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain"
    },
    "EcsFargateServiceTaskDefExecutionRole8F510A00": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "EcsFargateServiceTaskDefExecutionRoleDefaultPolicyE4B3DC18": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": ["logs:CreateLogStream", "logs:PutLogEvents"],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "EcsFargateServiceTaskDefwebLogGroup93678A4C",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "EcsFargateServiceTaskDefExecutionRoleDefaultPolicyE4B3DC18",
        "Roles": [
          {
            "Ref": "EcsFargateServiceTaskDefExecutionRole8F510A00"
          }
        ]
      }
    },
    "EcsFargateService45187D87": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "EcsFargateServiceEcsClusterF9C6531B"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 60,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "web",
            "ContainerPort": 80,
            "TargetGroupArn": {
              "Ref": "EcsFargateServiceLBPublicListenerECSGroup4611BEFE"
            }
          }
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "EcsFargateServiceSecurityGroupAD22B59D",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "EcsFargateServiceVpcPrivateSubnet1SubnetD4FDACD3"
              },
              {
                "Ref": "EcsFargateServiceVpcPrivateSubnet2SubnetE9425F69"
              }
            ]
          }
        },
        "TaskDefinition": {
          "Ref": "EcsFargateServiceTaskDef36236676"
        }
      },
      "DependsOn": [
        "EcsFargateServiceLBPublicListenerECSGroup4611BEFE",
        "EcsFargateServiceLBPublicListener81C77449"
      ]
    },
    "EcsFargateServiceSecurityGroupAD22B59D": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NlbFargateService/EcsFargateService/EcsFargateService/Service/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Fn::GetAtt": ["EcsFargateServiceVpcC2D7D9BA", "CidrBlock"]
            },
            "Description": "Allow http inbound from VPC",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": {
          "Ref": "EcsFargateServiceVpcC2D7D9BA"
        }
      }
    }
  },
  "Outputs": {
    "EcsFargateServiceLoadBalancerDNS8F6F2985": {
      "Value": {
        "Fn::GetAtt": ["EcsFargateServiceLBB6A07CF1", "DNSName"]
      }
    },
    "EcsFargateServiceLoadBalancerDNSBC54228A": {
      "Value": {
        "Fn::GetAtt": ["EcsFargateServiceLBB6A07CF1", "DNSName"]
      }
    }
  }
}
